--- a/index.html
+++ b/index.html
@@ -358,8 +358,7 @@
                         </g>
                         <g>
                         </g>
-                     </svg>
-                     Photography
+                     </svg>Photography
                   </li>
                   <li>
                      <svg height="512pt" viewBox="0 0 512 512" width="512pt" xmlns="http://www.w3.org/2000/svg">
